fixed z-index bug

--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ button:hover { background: #555; }
     z-index: 10;
 }
 
+.vis-background.vis-item {
+    z-index: 1 !important;
+}
+
 .vis-item.book { background-color: rgba(22, 212, 12, 0.75); border-color: #82b366; }
 .vis-item.history { background-color: rgba(201, 1, 1, 0.75); border-color: #b85450; }
 
